# CCUse

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  eslint.config.mjs  package.json  pnpm-lock.yaml  turbo.json  产品技术文档.md  任务报告.md  开发计划.md  无感切换方案-API代理模式.md  自动切换供应商应用设计方案.md
.agents/skills/next-best-practices/: SKILL.md
.claude/: scratchpad.md  settings.json
.claude/hooks/: feishu-notify.py  im-webhook-notify.py
.codex/: scratchpad.md
.github/workflows/: desktop-e2e.yml  release.yml
.serena/: project.yml
apps/desktop/: eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  playwright.tauri.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: proxy-monitor.spec.ts  tauri-app.spec.ts
apps/desktop/src/: App.tsx  globals.css  main.tsx  setupTests.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/benches/: proxy_throughput.rs  startup.rs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: e2e_fixture.rs  run_proxy.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_switch_history.sql  0003_request_logs.sql  0004_provider_quota.sql  0005_switch_history_nullable_to_provider.sql
apps/desktop/src-tauri/src/: commands.rs  config_export.rs  lib.rs  main.rs  panic_hook.rs  tray.rs
apps/desktop/src-tauri/src/auth/: local_key.rs  middleware.rs  mod.rs
apps/desktop/src-tauri/src/commands/: config_export.rs  health.rs  mod.rs  model_mapping.rs  monitor.rs  notification.rs  providers.rs  proxy.rs  switch.rs
apps/desktop/src-tauri/src/converter/: anthropic.rs  gemini.rs  mod.rs  model_mapping.rs  openai.rs  responses.rs  sse.rs  types.rs
apps/desktop/src-tauri/src/crypto/: master_key.rs  mod.rs  secure_storage.rs
apps/desktop/src-tauri/src/db/: init.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/src/health/: checker.rs  mod.rs  sliding_window.rs
apps/desktop/src-tauri/src/providers/: anthropic.rs  anthropic_headers.rs  api.rs  default_models.rs  error_format.rs  gemini.rs  manager.rs  mod.rs  model.rs  openai.rs  repository.rs  startup.rs  stream_check.rs  wrapper.rs
apps/desktop/src-tauri/src/proxy/: bridge.rs  error.rs  mod.rs  runtime.rs  server.rs  sse.rs
apps/desktop/src-tauri/src/switch/: engine.rs  history.rs  mod.rs  request_log.rs  strategy.rs
apps/desktop/src-tauri/tests/: anthropic_provider.rs  api_mock_integration.rs  converter_integration.rs  desktop_e2e_contract.rs  docs_contract.rs  icon_assets.rs  live_provider_failover.rs  log_sanitization.rs  memory_baseline.rs  openai_provider.rs  proxy_e2e.rs  proxy_server.rs  release_workflow.rs  tauri_conf.rs
apps/website/: mdx-components.tsx  next.config.mjs  package.json  site.ts  tailwind.config.ts  vercel.json
apps/website/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/components/: docs-content-shell.tsx  docs-search.tsx  docs-table-of-contents.tsx  download-platform-recommendation.tsx  mobile-navigation.tsx  site-analytics.tsx  site-footer.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
apps/website/i18n/: request.ts  routing.ts
apps/website/lib/: architecture.ts  docs-content.ts  docs.ts  download-platform.ts  github-release.ts
apps/website/messages/: en.json  zh.json
apps/website/scripts/: build-pagefind-index.mjs  verify-docs-faq.mjs  verify-docs-getting-started.mjs  verify-docs-monitoring.mjs  verify-docs-search.mjs  verify-docs-sidebar.mjs  verify-docs-strategies.mjs  verify-docs-toc.mjs  verify-download-artifacts.mjs  verify-seo.mjs  (+15 more)
docs/: 1.0.x-review.md  FAQ.md  smoke-test-report.md  user-manual.md  website-launch-checklist.md  产品技术文档.md  任务报告.md  开发计划.md  无感切换方案-API代理模式.md  自动切换供应商应用设计方案.md
scripts/: clean-cache.sh  verify-phase-1-0-1.sh  verify-phase-1-0-w-lint.mjs  verify-phase-1-0-w-turbo.mjs  verify-phase-1-0-w-workspace.mjs
(+72 files in other folders)
