[package]
name = "ccuse-desktop"
version = "0.0.0"
description = "CCUse desktop application"
authors = ["CCUse Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ccuse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
