[package]
name = "ccuse-desktop"
version = "0.0.0"
description = "CCUse desktop application"
authors = ["CCUse Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ccuse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# 实战中过严的几条放宽（按 rust-best-practices §2 建议显式列出）
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
