[package]
name = "ccuse-desktop"
version = "1.0.0"
description = "CCUse desktop application"
authors = ["CCUse Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ccuse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["cors"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng", "os_rng"] }
subtle = "2.6.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
base64 = "0.22.1"
zeroize = { version = "1.8.2", features = ["derive"] }
aes-gcm = "0.10.3"
uuid = { version = "1.20.0", features = ["v4"] }
async-trait = "0.1.89"
bytes = "1.11.1"
futures = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-stream = { version = "0.1.18", features = ["net", "time"] }
tauri-plugin-notification = "2"
scrypt = "0.11"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "proxy_throughput"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
panic = "unwind"
lto = false
strip = false

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# 实战中过严的几条放宽（按 rust-best-practices §2 建议显式列出）
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
